added some comment

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <!-- This is where we will post the guessesSoFar. Nothing is shown. -->
         <p class="game"> Your Guesses so far: <span id="yourguess-text"></span></p>
     </div>
+    <!--Adding audio -->
     <audio id="myAudio">
         <source src="assets/audio/Music.mp3">
     </audio>
